# debugagent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
debugagent/: config.py  main.py
debugagent/agent/: circuit_breaker.py  evaluator.py  loop.py  planner.py  reflector.py  repair.py
debugagent/llm/: base.py  gemini_client.py  rate_limiter.py
debugagent/memory/: episodic.py  improvement_log.py  solution_store.py
debugagent/observability/: tracer.py
debugagent/sandbox/: base.py  runner.py  subprocess_backend.py
debugagent/schemas/: models.py
debugagent/utils/: code_utils.py  context_budget.py  hash_utils.py
docker/: docker-compose.langfuse.yml
fixtures/: README.md
fixtures/bugs/01_off_by_one/: buggy.py  test_buggy.py
fixtures/bugs/02_none_not_handled/: buggy.py  test_buggy.py
fixtures/bugs/03_wrong_sort_order/: buggy.py  test_buggy.py
fixtures/bugs/04_type_mismatch/: buggy.py  test_buggy.py
fixtures/bugs/05_missing_base_case/: test_buggy.py
fixtures/bugs/06_string_vs_int/: test_buggy.py
fixtures/bugs/07_dict_key_missing/: buggy.py  test_buggy.py
fixtures/bugs/08_wrong_comparison/: buggy.py  test_buggy.py
fixtures/bugs/09_name_before_assign/: buggy.py  test_buggy.py
fixtures/bugs/10_edge_case_empty/: test_buggy.py
prompts/: reflect_system.txt  reflect_user.txt  repair_system.txt  repair_user.txt
tests/: test_circuit_breaker.py  test_evaluator.py  test_integration.py  test_memory.py  test_sandbox.py  test_schemas.py
